# chatgpt-history-export-to-md

./: .gitignore  AGENTS.md  CHANGELOG_JSON_UPDATE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NEXT_STEPS.md  README.md  TODO.md  cli.py  config (old).json  config.json  install.ps1  install.sh  main (old).py  main.py  playground.ipynb  project_layout.txt  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  requirements.txt  ruff.toml  run_me.py  setup.py  setup_env.py  user_config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-feedback.md  general_feedback.md
.github/workflows/: ci.yml  deps-audit.yml  pylint.yml  python-app.yml  release.yml
assets/: colormaps.txt
assets/demo/: Fibonacci-dollar-signs.md  Fibonacci.md
assets/stopwords/: kagglesdsdata_datasets_arabic.txt  kagglesdsdata_datasets_english.txt  programming-languages-keywords.txt
chatgpt_conversations/: main.py  utils.py
controllers/: __init__.py  configuration.py  data_analysis.py  data_visualizations.py  file_system.py  processes.py
convoviz/: __init__.py  __main__.py  cli.py  config.py  configuration.py  data_analysis.py  exceptions.py  interactive.py  logging_config.py  long_runs.py  message_logic.py  pipeline.py  process.py  utils.py
convoviz/analysis/: __init__.py  graphs.py  wordcloud.py
convoviz/analysis/graphs/: __init__.py  common.py  dashboard.py  distributions.py  heatmaps.py  timeseries.py
convoviz/assets/: colormaps.txt  default_config.toml  stopwords.txt
convoviz/io/: __init__.py  assets.py  canvas.py  loaders.py  writers.py
convoviz/models/: __init__.py  _conversation.py  _conversation_set.py  _message.py  _node.py  collection.py  conversation.py  message.py  node.py
convoviz/renderers/: __init__.py  markdown.py  yaml.py
demo/: Fibonacci with Matrix Exponentiation.md  Fibonacci.md
dev/: HANDOFF.md
docs/: advanced-markdown-part1.md  chatgpt-spec-unofficial-v2.md  chatgpt-spec-unofficial-v3.md  chatgpt-spec-unofficial.md  pandoc-pdf-guide.md  quest-for-spec.md
docs/dev/: CHANGELOG.md  HANDOFF.md  RECS.md  architecture.md  chatgpt-export-discovery.md  chatgpt-spec.md  data-schema.md  workflow.md
javascript/: bookmarklet.js  how_to.md  how_to_use.md
js/: HOW_TO_USE.md  bookmarklet.js  how_to_use.md  script.js
models/: __init__.py  conversation.py  conversation_list.py  conversation_set.py  message.py  node.py
samples/: Fibonacci with Matrix Exponentiation.md
scripts/: release.sh
src/: custom_json_files.py  data_visualization.py  main.py  message_processing.py  metadata_extraction.py  utils.py
tests/: conftest.py  mocks.py  test_assets.py  test_attachment_renaming.py  test_canvas.py  test_cli.py  test_config.py  test_conversation.py  test_exceptions.py  test_graphs.py  test_interactive.py  test_loaders.py  test_logging_config.py  test_mapping.py  test_markdown_flavors.py  test_message.py  test_models.py  test_node.py  test_pipeline.py  test_process.py  test_renderers.py  test_security.py  test_utils.py  test_v3_spec.py  test_wordcloud.py  test_writers.py
utils/: __init__.py  dev_helpers.py  utils.py
views/: __init__.py  data_visualizations.py  prompt_user.py  questions.py
