[project]
name = "convoviz"
version = "0.4.2"
description = "Get analytics and visualizations on your ChatGPT data!"
license = "MIT"
keywords = [
    "markdown", "chatgpt", "openai", "visualization",
    "analytics", "json", "export", "data-analysis", "obsidian"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mohamed Cheikh Sidiya", email = "mohamedcheikhsidiya77@gmail.com" }
]
dependencies = [
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "questionary>=2.1.1",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
    "typer>=0.21.0",
]

[project.optional-dependencies]
viz = [
    "nltk>=3.9.2",
    "wordcloud>=1.9.5",
]

[project.urls]
Repository = "https://github.com/mohamed-chs/convoviz"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Add this line to tell uv your code is in the root, not in src/
module-root = "."

# Files to exclude from the Source Distribution (sdist)
source-exclude = [
    ".github",
    ".vscode",
    ".gitattributes",
    ".gitignore",
    "dev",
    "playground.ipynb",
    "pyproject.toml.bak",
    "uv.lock",
    "demo",
    "js",
    "tests",
]

[project.scripts]
convoviz = "convoviz.cli:main_entry"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.10",
    "ty>=0.0.11",
    "types-tqdm>=4.67.0.20250809",
    # Viz extras for testing (wordcloud pulls in matplotlib + pillow)
    "nltk>=3.9.2",
    "wordcloud>=1.9.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["convoviz"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
