[project]
name = "convoviz"
version = "0.6.0"
description = "Convert your ChatGPT export (ZIP) into clean Markdown text files with inline media, and generate data visualizations like word clouds and usage graphs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Mohamed Cheikh Sidiya", email = "mohamedcheikhsidiya77@gmail.com" },
]
license = "MIT"
keywords = [
  "markdown",
  "chatgpt",
  "openai",
  "visualization",
  "analytics",
  "json",
  "export",
  "data-analysis",
  "obsidian",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "orjson>=3.11.5",
  "platformdirs>=4.5.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.7.0",
  "pyyaml>=6.0.3",
  "questionary>=2.1.1",
  "rich>=14.2.0",
  "tqdm>=4.67.1",
  "typer>=0.21.0",
]

[project.urls]
Repository = "https://github.com/mohamed-chs/convoviz"

[project.optional-dependencies]
viz = ["nltk>=3.9.2", "wordcloud>=1.9.5"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.14.10",
  "ty>=0.0.11",
  "types-tqdm>=4.67.0.20250809",
  # Viz extras for testing (wordcloud pulls in matplotlib + pillow)
  "nltk>=3.9.2",
  "wordcloud>=1.9.5",
  "poethepoet>=0.40.0",
]

# run with 'uv run poe <task>' eg. 'uv run poe fmt'
# or if poe is installed globally, 'poe fmt'
[tool.poe.tasks]
lint = "ruff check convoviz tests"
fmt = "ruff format"
test = "pytest"
ty = "ty check convoviz"

[project.scripts]
convoviz = "convoviz.cli:main_entry"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Add this line to tell uv your code is in the root, not in src/
module-root = "."

# Files to exclude from the Source Distribution (sdist)
source-exclude = [
  ".github",
  ".vscode",
  ".gitattributes",
  ".gitignore",
  "dev",
  "playground.ipynb",
  "pyproject.toml.bak",
  "uv.lock",
  "demo",
  "js",
  "tests",
]
